# landropic

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  2025-09-05-this-session-is-being-continued-from-a-previous-co.md  2025-09-06-clearly-spawning-multiple-agents-simultaneously-in.txt  AGENT-SETUP.md  AGENTS.md  BUILD_VALIDATION_REPORT.md  Cargo.toml  Dockerfile  FINAL_BUILD_VALIDATION.md  PHASE2_INTEGRATION_TEST_REPORT.md  PROJECT.md  QA-STATUS-REPORT.md  README.md  RECOVERY_DEPLOYMENT.md  RECOVERY_PLAN.md  SECURITY_FIX_REPORT.md  SUMMARY.md  agent-coordinator.sh  data_model.md  docker-compose.yml  flake.nix  justfile  key_design_choices_and_trade-offs.md  key_flows.md  local-ci.sh  observability.md  quality-log.txt  security_model.md  setup-pre-commit.sh  test_alpha_transfer.sh  test_connection.sh  test_sync.sh  testing_and_validation.md  validate-build.sh  validate-engineer-fix.sh
.cargo/: config.toml  config.toml.backup  config.toml.backup2
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-validation.yml  ci.yml  nix-ci.yml  nix-release.yml.disabled  release.yml
ISSUE_TEMPLATE/: task.md
docs/: AGENT_COORDINATION.md  ALPHA_COORDINATION.md  API_REFERENCE.md  CLI_REFERENCE.md  DEVELOPER_SETUP.md  NIX-GUIDE.md  PROTOCOLS_AND_SECURITY.md  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  USER_GUIDE.md  day3_completion_report.md  day3_sync_completion_report.md  demo_script.md  git-divergence-diagnosis-method.md  interfaces.md  pairing-security-model.md  quic-integration-decisions.md  quic-integration-status-final.md  quic-integration-summary.md  quic-optimizations.md  quic_api.json  quic_api_day2.json  quic_day1_report.md  quic_day2_report.md  risks_and_mitigations.md  roadmap.md  scaffold_proposal.md  sync_api_reference.md  sync_integration_complete.md  sync_protocol_spec.json  team_topology.md
docs/security/: audit.md
interfaces/: storage_api.json
landro-cas/: Cargo.toml
landro-cas/benches/: comprehensive_bench.rs
landro-cas/examples/: atomic_write_demo.rs
landro-cas/src/: atomic.rs  errors.rs  lib.rs  metrics.rs  packfile.rs  storage.rs  utilities.rs  validation.rs
landro-cas/tests/: resumable.rs  streaming_perf.rs
landro-chunker/: Cargo.toml
landro-chunker/benches/: chunker_bench.rs  chunking_performance.rs  quick_bench.rs
landro-chunker/examples/: fastcdc_demo.rs
landro-chunker/proptest-regressions/: chunker.txt
landro-chunker/src/: chunker.rs  errors.rs  hash.rs  lib.rs
landro-chunker/tests/: integration_test.rs
landro-cli/: Cargo.toml
landro-cli/src/: config.rs  daemon_client.rs  main.rs
landro-crypto/: Cargo.toml  README.md
landro-crypto/src/: certificate.rs  errors.rs  identity.rs  lib.rs  secure_verifier.rs
landro-daemon/: Cargo.toml  README.md
landro-daemon/examples/: discovery_demo.rs
landro-daemon/src/: bloom_diff.rs  bloom_sync_integration.rs  cli_progress_api.rs  connection_handler.rs  daemon.rs  daemon_v2.rs  discovery.rs  end_to_end_sync.rs  file_transfer_client.rs  lib.rs  main.rs  network.rs  orchestrator.rs  resume_manager.rs  security.rs  simple_sync_protocol.rs  sync_engine.rs  watcher.rs
landro-daemon/src/discovery/: mod.rs  tests.rs
landro-daemon/tests/: file_change_pipeline_test.rs  integration_test.rs  network_integration_test.rs  orchestrator_integration_test.rs  peer_discovery_test.rs
landro-index/: Cargo.toml
landro-index/examples/: async_safe_usage.rs
landro-index/src/: async_indexer.rs  database.rs  database_pool.rs  errors.rs  indexer.rs  lib.rs  manifest.rs  migrations.rs  schema.rs  watcher.rs
landro-index/src/migrations/: 004_optimize_chunk_indexes.sql
landro-index/src/watcher/: fallback.rs  legacy.rs  linux.rs  macos.rs  mod.rs  windows.rs
landro-proto/: Cargo.toml  README.md  build.rs
landro-proto/proto/: messages.proto
landro-proto/src/: lib.rs  sync_handler.rs  validation.rs
landro-quic/: Cargo.toml  PERFORMANCE.md
landro-quic/benches/: integration_bench.rs  throughput_bench.rs
landro-quic/scripts/: profile.sh
landro-quic/src/: chunk_provider.rs  client.rs  config.rs  connection.rs  errors.rs  health_monitor.rs  lib.rs  pairing.rs  parallel_transfer.rs  performance_optimizer.rs  pool.rs  protocol.rs  reconnection_manager.rs  recovery.rs  resumable.rs  server.rs  stream_multiplexer.rs  stream_transfer.rs  transfer.rs  zero_copy.rs
landro-quic/tests/: integration_test.rs  performance_test.rs
landro-sync/: Cargo.toml
landro-sync/src/: conflict.rs  conflict_detection.rs  diff.rs  errors.rs  lib.rs  orchestrator.rs  progress.rs  protocol.rs  quic_integration.rs  recovery.rs  scheduler.rs  state.rs  sync_persistence.rs
landro-sync/tests/: integration_tests.rs
memory/: memory-store.json
memory/sessions/: README.md
qa/: ALPHA_TRANSITION_COMPLETE.md  FINAL_QA_VALIDATION_REPORT.md  NETWORK_ENGINEER_URGENT_TASKS.md  QUIC_ENGINEER_INSPECTION_REPORT.md  alpha_2hour_report.sh  alpha_checklist.json  alpha_monitor.sh  alpha_validation.sh  bugs.json  test_status.json
qa/results/: alpha_2hour_20250906_2343.json  alpha_baseline_report.json  alpha_validation_report.json  bug_report_1757215869.json  bug_report_1757216052.json  bug_report_1757216190.json  bug_report_1757216504.json  bug_report_1757216824.json
scripts/: quality-gates.sh  quality-monitor.sh  quick-ci-test.sh  regression-test.sh  release.sh  test_resume_conflicts.sh
src/: lib.rs
tests/: README.md  bug_report_cas_compilation_errors.md  bug_report_quic_compilation_errors.md  cross_platform_test_plan.md  filesystem_edge_cases.rs  filesystem_test  integration_file_transfer.rs  integration_test.rs  integration_test_framework.rs  integration_tests.rs  lib.rs  macOS_platform_test_results.md  macOS_test_environment.md  phase2_core_test.rs  phase2_test.rs  platform_compatibility_matrix.md  run_integration_tests.sh  standalone_filesystem_test  standalone_filesystem_test.rs  sync_integration_test.rs
tests/common/: mod.rs
tests/fixtures/: sample_files.json  test_config.toml
tests/integration/: cli_daemon_test.rs  network_test.rs  (+2 more)
workflows/: nix-ci.yml.disabled
(+2 files in other folders)
