[package]
name = "landro-cas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
landro-chunker = { path = "../landro-chunker" }

tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
bytes = "1.7"
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }

[[example]]
name = "atomic_write_demo"
required-features = []