[package]
name = "landro-cas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressed storage system for Landropic"
repository.workspace = true
readme = "README.md"
keywords = ["storage", "content-addressed", "deduplication", "cas"]
categories = ["filesystem", "data-structures"]

[dependencies]
landro-chunker = { path = "../landro-chunker" }

tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
bytes = "1.7"
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }

[[example]]
name = "atomic_write_demo"
required-features = []