[package]
name = "landro-cas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressed storage system for Landropic"
repository.workspace = true
readme = "README.md"
keywords = ["storage", "content-addressed", "deduplication", "cas"]
categories = ["filesystem", "data-structures"]

[dependencies]
landro-chunker = { path = "../landro-chunker" }

tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
thiserror = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
bytes = "1.7"
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
memmap2 = "0.9"
lru = "0.12"
lz4_flex = "0.11"
zstd = "0.13"
snap = "1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }
tracing-test = "0.2"
rand = "0.8"

[[bench]]
name = "comprehensive_bench"
harness = false

[[example]]
name = "atomic_write_demo"
required-features = []