[package]
name = "landro-chunker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-defined chunking with FastCDC for Landropic"
repository.workspace = true
readme = "README.md"
keywords = ["chunking", "deduplication", "fastcdc", "blake3"]
categories = ["algorithms", "filesystem"]

[dependencies]
blake3 = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
thiserror = { workspace = true }
bytes = "1.7"
futures = "0.3"
tracing = { workspace = true }
hex = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "fs", "rt"] }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "chunker_bench"
harness = false