[package]
name = "landro-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Landropic encrypted file sync"
repository.workspace = true
readme = "README.md"
keywords = ["cli", "command-line", "sync", "encryption"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "landropic"
path = "src/main.rs"

[dependencies]
landro-daemon = { path = "../landro-daemon" }
landro-crypto = { path = "../landro-crypto" }

clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
qr2term = "0.3"
toml = "0.8"
dirs = { workspace = true }
whoami = "1.5"
urlencoding = "2.1"
colored = "2.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"