[package]
name = "landro-cli"
version = "0.0.1-alpha"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Simple CLI for Landropic alpha release"
repository.workspace = true

[[bin]]
name = "landro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
shellexpand = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"