[package]
name = "landro-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
dangerous-allow-any = [] # Feature to enable unsafe certificate acceptance

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
time = { workspace = true }
hex = { workspace = true }
x509-parser = "0.16"
whoami = "1.4"
pem = "3.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }