[package]
name = "landro-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon service for Landropic file synchronization"
repository.workspace = true
readme = "README.md"
keywords = ["daemon", "service", "mdns", "sync"]
categories = ["network-programming", "filesystem"]

[dependencies]
landro-proto = { path = "../landro-proto" }
landro-crypto = { path = "../landro-crypto" }
landro-quic = { path = "../landro-quic" }
landro-chunker = { path = "../landro-chunker" }
landro-cas = { path = "../landro-cas" }
landro-index = { path = "../landro-index" }
landro-sync = { path = "../landro-sync" }

tokio = { workspace = true }
mdns-sd = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quinn = { workspace = true }
zeroconf = { workspace = true }
gethostname = "0.4"
hex = { workspace = true }
whoami = "1.4"
futures = "0.3"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
bincode = { workspace = true }
zstd = "0.13"
bytes = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"], default-features = false }
siphasher = "1.0"
blake3 = "1.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "landro-daemon"
path = "src/main.rs"

[[bin]]
name = "file-transfer"
path = "src/bin/file_transfer.rs"

[dev-dependencies]
tempfile = { workspace = true }
rustls = "0.23"