[package]
name = "landro-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
landro-chunker = { path = "../landro-chunker" }
landro-cas = { path = "../landro-cas" }

rusqlite = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }