[package]
name = "landro-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite-based file index and manifest management for Landropic"
repository.workspace = true
readme = "README.md"
keywords = ["database", "index", "manifest", "sqlite"]
categories = ["database", "filesystem"]

[dependencies]
landro-chunker = { path = "../landro-chunker" }
landro-cas = { path = "../landro-cas" }

rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["executor"] }
async-trait = "0.1"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "winnt", "ioapiset"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
futures = { version = "0.3" }
tracing-subscriber = { version = "0.3" }