[package]
name = "landro-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, optional = true }

[build-dependencies]
prost-build = "0.13"

[features]
default = []
serde = ["dep:serde", "prost-types/std"]