[package]
name = "landro-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol buffer definitions for Landropic encrypted file sync"
repository.workspace = true
readme = "README.md"
keywords = ["protocol", "protobuf", "sync", "encryption"]
categories = ["network-programming", "encoding"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[features]
default = []
serde = ["dep:serde", "prost-types/std"]