[package]
name = "landro-quic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
landro-crypto = { path = "../landro-crypto" }
landro-proto = { path = "../landro-proto" }

quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = "1.7"
futures = "0.3"
prost = { workspace = true }
prost-types = { workspace = true }
hex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }