[package]
name = "landro-quic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "QUIC transport layer for Landropic encrypted file sync"
repository.workspace = true
readme = "README.md"
keywords = ["quic", "networking", "transport", "encryption"]
categories = ["network-programming", "asynchronous"]

[dependencies]
landro-crypto = { path = "../landro-crypto" }
landro-proto = { path = "../landro-proto" }
landro-cas = { path = "../landro-cas" }
landro-chunker = { path = "../landro-chunker" }

quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = "1.7"
futures = "0.3"
prost = { workspace = true }
prost-types = { workspace = true }
hex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { workspace = true }
blake3 = { workspace = true }
rand = "0.8"
async-trait = "0.1"
memmap2 = "0.9"
argon2 = "0.5"
subtle = "2.5"
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
zeroize = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
lru = "0.12"
fastrand = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = { workspace = true }

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "integration_bench"
harness = false