[package]
name = "landro-sync"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
landro-proto = { path = "../landro-proto" }
landro-index = { path = "../landro-index" }
landro-cas = { path = "../landro-cas" }
landro-chunker = { path = "../landro-chunker" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Database
rusqlite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Data structures
indexmap = "2.0"
priority-queue = "1.3"

# Random number generation
rand = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
